--- a/index.html
+++ b/index.html
@@ -1,39 +1,20 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Between the Worlds</title>
     <style>
-        body {
-            background-color: black;
-            color: white;
-            font-family: 'Arial', sans-serif;
-            text-align: center;
-            padding: 50px;
-        }
-        a {
-            color: cyan;
-            margin: 0 15px;
-            text-decoration: none;
-        }
-        img {
-            max-width: 90%;
-            margin: 20px auto;
-            border: 1px solid #444;
-            border-radius: 8px;
-        }
+        body { background-color: black; color: white; font-family: sans-serif; text-align: center; padding: 5em; }
+        a { margin: 0 10px; color: cyan; text-decoration: none; font-weight: bold; }
     </style>
 </head>
 <body>
     <h1>Between the Worlds</h1>
     <p>Where light remembers what shadow forgot.</p>
-    <nav>
+    <div class="language-switch">
         <a href="index.html">EN</a>
         <a href="index_de.html">DE</a>
         <a href="index_jp.html">JP</a>
-    </nav>
-    <img src="BTW_EN.png" alt="Between the Worlds English">
-    <img src="Sealtiel_EN.png" alt="Sealtiel English">
+    </div>
 </body>
 </html>
