--- a/index_jp.html
+++ b/index_jp.html
@@ -1,20 +1,46 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>世界の狭間を越えて</title>
-    <style>
-        body { background-color: black; color: white; font-family: sans-serif; text-align: center; padding: 5em; }
-        a { margin: 0 10px; color: cyan; text-decoration: none; font-weight: bold; }
-    </style>
+  <meta charset="UTF-8">
+  <title>世界の狭間を越えて</title>
+  <style>
+    body {
+      background-color: black;
+      color: white;
+      font-family: sans-serif;
+      text-align: center;
+      padding-top: 100px;
+    }
+    h1 {
+      font-size: 42px;
+    }
+    p {
+      font-size: 20px;
+    }
+    .lang-buttons a {
+      margin: 10px;
+      padding: 10px 20px;
+      background-color: #00ffff;
+      color: black;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .lang-buttons a:hover {
+      background-color: #00cccc;
+    }
+  </style>
 </head>
 <body>
-    <h1>世界の狭間を越えて</h1>
-    <p>光が影の忘れたものを思い出す場所。</p>
-    <div class="language-switch">
-        <a href="index.html">EN</a>
-        <a href="index_de.html">DE</a>
-        <a href="index_jp.html">JP</a>
-    </div>
+
+  <h1>世界の狭間を越えて</h1>
+  <p>光が影の忘れたものを思い出す場所。</p>
+
+  <div class="lang-buttons">
+    <a href="index.html">EN</a>
+    <a href="index_de.html">DE</a>
+    <a href="index_jp.html">JP</a>
+  </div>
+
 </body>
 </html>
