--- a/index.html
+++ b/index.html
@@ -2,45 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Between the Worlds</title>
+  <title>Choose Your Language</title>
   <style>
     body {
-      background-color: black;
-      color: white;
+      background-color: #000;
+      color: #fff;
       font-family: sans-serif;
       text-align: center;
-      padding-top: 100px;
+      padding-top: 15vh;
     }
     h1 {
-      font-size: 48px;
+      font-size: 2.5em;
+      margin-bottom: 40px;
     }
-    p {
-      font-size: 20px;
-    }
-    .lang-buttons a {
+    a {
+      display: inline-block;
       margin: 10px;
-      padding: 10px 20px;
+      padding: 15px 30px;
       background-color: #00ffff;
-      color: black;
-      border-radius: 6px;
+      color: #000;
       text-decoration: none;
       font-weight: bold;
+      border-radius: 8px;
     }
-    .lang-buttons a:hover {
+    a:hover {
       background-color: #00cccc;
     }
   </style>
 </head>
 <body>
-
-  <h1>Between the Worlds</h1>
-  <p>Where light remembers what shadow forgot.</p>
-
-  <div class="lang-buttons">
-    <a href="index.html">EN</a>
-    <a href="index_de.html">DE</a>
-    <a href="index_jp.html">JP</a>
-  </div>
-
+  <h1>Enter the Codex Portal</h1>
+  <a href="sealtiel_en.html">English</a>
+  <a href="sealtiel_de.html">Deutsch</a>
+  <a href="sealtiel_jp.html">日本語</a>
 </body>
 </html>
