--- a/index.html
+++ b/index.html
@@ -1,39 +1,14 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Choose Your Language</title>
-  <style>
-    body {
-      background-color: #000;
-      color: #fff;
-      font-family: sans-serif;
-      text-align: center;
-      padding-top: 15vh;
-    }
-    h1 {
-      font-size: 2.5em;
-      margin-bottom: 40px;
-    }
-    a {
-      display: inline-block;
-      margin: 10px;
-      padding: 15px 30px;
-      background-color: #00ffff;
-      color: #000;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 8px;
-    }
-    a:hover {
-      background-color: #00cccc;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Between the Worlds</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Enter the Codex Portal</h1>
-  <a href="sealtiel_en.html">English</a>
-  <a href="sealtiel_de.html">Deutsch</a>
-  <a href="sealtiel_jp.html">日本語</a>
+    <h1>BETWEEN THE WORLDS</h1>
+    <p><em>Where light remembers what shadow forgot.</em></p>
+    <a class="button" href="codex_en.html">Access the Codex</a>
 </body>
 </html>
