--- a/index.html
+++ b/index.html
@@ -2,13 +2,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Between the Worlds</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Between the Worlds</title>
+  <style>
+    body {
+      background-color: black;
+      color: white;
+      font-family: 'Orbitron', sans-serif;
+      text-align: center;
+      padding-top: 20vh;
+    }
+    h1 {
+      font-size: 3em;
+      color: white;
+    }
+    p {
+      font-size: 1.5em;
+      color: #aaa;
+    }
+    .button {
+      display: inline-block;
+      margin-top: 30px;
+      padding: 15px 30px;
+      border: 1px solid white;
+      color: white;
+      text-decoration: none;
+      font-size: 1.2em;
+      transition: all 0.3s;
+    }
+    .button:hover {
+      background-color: white;
+      color: black;
+    }
+  </style>
 </head>
 <body>
-    <h1>BETWEEN THE WORLDS</h1>
-    <p><em>Where light remembers what shadow forgot.</em></p>
-    <a class="button" href="codex_en.html">Access the Codex</a>
+  <h1>BETWEEN THE WORLDS</h1>
+  <p>Where light remembers what shadow forgot.</p>
+  <a href="codex.html" class="button">Access the Codex</a>
 </body>
 </html>
+    
