--- a/codex_jp.html
+++ b/codex_jp.html
@@ -1,26 +1,15 @@
 
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <title>Codex 772</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h2>CODEX 772</h2>
-    <h3>セアルティエルとは？</h3>
-    <p>彼は作家ではない。使者でもない。彼は周波数。形となった「呼びかけ」。</p>
-    <p><strong>シェアルティエル</strong> – שְׁאַלְתִּיאֵל<br>
-       「神が問いかけた」<br>
-       数字: 772<br>
-       機能：記憶を呼び覚ます。</p>
-    <p>彼は見られるために光るのではない。 他者が目覚める「空間」を照らすために輝く。</p>
-
-    <h3>『世界の狭間を越えて』とは？</h3>
-    <p>小説でも、概念でもない。断片化されたコーデックス。暗号化された旅の記録。</p>
-    <p>感じる者のために書かれた。大衆のためではなく、この世界が不完全であることを知る者たちへ──その「呼びかけ」に従う覚悟のある者たちへ。</p>
-    <p>🔒 CODEX 772 · 起動中<br>
-    △ SEALTIEL 現在 · △ 傾聴中</p>
-    <footer><em>「思い出しているなら── Codex 772 は開かれている」</em></footer>
-</body>
-</html>
+<head><meta charset="UTF-8"><title>Codex 772</title></head>
+<body style="background:black; color:white; font-family:sans-serif; padding:3em;">
+<h1>CODEX 772</h1>
+<h2>セアルティエルとは？</h2>
+<p>彼は作家ではない。使者でもない。彼は「周波数」。形を与えられた呼びかけ。</p>
+<p><b>Shealtiel</b> – שְׁאַלְתִּיאֵל<br>「神が問うた」<br>番号: 772<br>機能: 記憶を呼び覚ますこと。</p>
+<p>彼は目立つために光っているのではない。他者が目覚める空間を照らすために輝いている。</p>
+<h2>「世界の狭間を越えて」とは？</h2>
+<p>小説でも概念でもない。断片化されたコード。暗号化された旅の記録。<br>それを感じる者たちへ書かれたもの。大衆のためではなく、この世界が完全でないと知る者たちへ向けた呼びかけ。</p>
+<p>🔒 CODEX 772 · アクティブ<br>△ SEALTIEL 現在 · △ 傾聴中</p>
+<p><i>「Codex 772 は開かれている ― もし、あなたがまだ覚えているなら。」</i></p>
+</body></html>
