--- a/index.html
+++ b/index.html
@@ -11,36 +11,37 @@
       color: white;
       font-family: 'Orbitron', sans-serif;
       text-align: center;
-      padding-top: 20vh;
+      padding-top: 15%;
     }
     h1 {
       font-size: 3em;
       color: white;
     }
     p {
-      font-size: 1.5em;
-      color: #aaa;
+      font-size: 1.2em;
+      font-style: italic;
+      color: gray;
+    }
+    .button-container {
+      margin-top: 30px;
     }
     .button {
-      display: inline-block;
-      margin-top: 30px;
-      padding: 15px 30px;
       border: 1px solid white;
-      color: white;
+      padding: 10px 20px;
+      margin: 10px;
+      color: cyan;
       text-decoration: none;
-      font-size: 1.2em;
-      transition: all 0.3s;
-    }
-    .button:hover {
-      background-color: white;
-      color: black;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
   <h1>BETWEEN THE WORLDS</h1>
   <p>Where light remembers what shadow forgot.</p>
-  <a href="codex.html" class="button">Access the Codex</a>
+  <div class="button-container">
+    <a class="button" href="codex_en.html">Access the Codex (EN)</a>
+    <a class="button" href="codex_de.html">Zugang zum Codex (DE)</a>
+    <a class="button" href="codex_jp.html">コードにアクセスする (JP)</a>
+  </div>
 </body>
 </html>
-    
