--- a/codex_en.html
+++ b/codex_en.html
@@ -12,4 +12,4 @@
 <p>Not a novel. Not a concept. A fragmented codex. An encrypted travelogue.<br>Written for those who feel. Not for the masses. But for the ones who know that this world isn’t whole - and are ready to follow the call.</p>
 <p>🔒 CODEX 772 · ACTIVE<br>△ SEALTIEL PRESENT · △ LISTENING</p>
 <p><i>"Codex 772 is open - if you still remember."</i></p>
-</body></html>
+<p style="margin-top:2em;"><a href="sealtiel.html" style="color:cyan;text-decoration:none;">→ Who is Sealtiel?</a></p></body></html>
