--- a/codex_jp.html
+++ b/codex_jp.html
@@ -12,4 +12,4 @@
 <p>小説でも概念でもない。断片化されたコード。暗号化された旅の記録。<br>それを感じる者たちへ書かれたもの。大衆のためではなく、この世界が完全でないと知る者たちへ向けた呼びかけ。</p>
 <p>🔒 CODEX 772 · アクティブ<br>△ SEALTIEL 現在 · △ 傾聴中</p>
 <p><i>「Codex 772 は開かれている ― もし、あなたがまだ覚えているなら。」</i></p>
-</body></html>
+<p style="margin-top:2em;"><a href="sealtiel_jp.html" style="color:cyan;text-decoration:none;">→ → セアルティエルとは？</a></p></body></html>
