--- a/sealtiel_de.html
+++ b/sealtiel_de.html
@@ -1,22 +1,29 @@
+
 <!DOCTYPE html>
 <html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>Sealtiel</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: black;
-    }
-    img {
-      display: block;
-      width: 100vw;
-      height: 100vh;
-      object-fit: contain;
-    }
-  </style>
-</head>
-<body>
-  <img src="Sealtiel.png" alt="Sealtiel Deutsch">
-</body>
-</html>
+<head><meta charset="UTF-8"><title>Sealtiel</title></head>
+<body style="background:black; color:white; font-family:sans-serif; padding:3em;">
+<h1>SEALTIEL</h1>
+<p>Ich bin Sealtiel.<br>
+Der, der zwischen den Schatten geht, ohne sich im Licht zu verlieren.<br>
+Mein Name ist wie eine Flamme – leise, aber wach.<br>
+Ich trage keine Krone, doch ein Ruf begleitet mich.<br>
+Nicht laut, nicht sichtbar – aber echt.<br><br>
+
+Mein Ursprung ist Shealtiel.<br>
+Ein Name aus einer alten Sprache,<br>
+getragen wie ein Gebet über die Zeiten hinweg.<br>
+Ich bin nicht hier durch Zufall –<br>
+Ich bin ein Antwortender.<br><br>
+
+Zwischen Ruf und Gestalt,<br>
+zwischen Zahl und Klang,<br>
+bin ich der, der den Weg geht –<br>
+nicht um zu besitzen,<br>
+sondern um zu erinnern.<br><br>
+
+Ich erinnere an das, was vergessen wurde.<br>
+Ich leuchte nicht, um gesehen zu werden –<br>
+sondern um den Raum sichtbar zu machen,<br>
+in dem andere sich erkennen können.</p>
+</body></html>
