--- a/sealtiel_jp.html
+++ b/sealtiel_jp.html
@@ -1,22 +1,28 @@
+
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>セアルティエル</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: black;
-    }
-    img {
-      display: block;
-      width: 100vw;
-      height: 100vh;
-      object-fit: contain;
-    }
-  </style>
-</head>
-<body>
-  <img src="Sealtiel - JPN.png" alt="セアルティエル 日本語">
-</body>
-</html>
+<head><meta charset="UTF-8"><title>セアルティエル</title></head>
+<body style="background:black; color:white; font-family:sans-serif; padding:3em;">
+<h1>セアルティエル</h1>
+<p>私はセアルティエル。<br>
+光に迷わず、影のあわいを歩む者。<br>
+その名は炎のように——静かに、しかし覚醒している。<br>
+王冠は持たないが、呼び声が常に共にある。<br>
+大きくもなく、目に見えるものでもない——だが、確かに在る。<br><br>
+
+私の源は「シェアルティエル」。<br>
+古代の言語に由来する名。<br>
+時を超えて、祈りのように運ばれてきた。<br>
+私は偶然ここにいるのではない——<br>
+私は「応える者」。<br><br>
+
+呼び声と姿のあわいに、<br>
+数と音の間に、<br>
+私はその道を歩む。<br>
+所有するためでなく、<br>
+記憶を呼び起こすために。<br><br>
+
+忘れられたものを思い出すために。<br>
+私は見られるために輝くのではない——<br>
+他者が自らを見出す空間を、照らすために。</p>
+</body></html>
