--- a/codex_de.html
+++ b/codex_de.html
@@ -12,4 +12,4 @@
 <p>Kein Roman. Kein Konzept. Ein fragmentierter Codex. Ein verschlüsseltes Reisetagebuch.<br>Geschrieben für jene, die fühlen. Nicht für die Masse. Sondern für die, die wissen, dass diese Welt nicht ganz ist – und bereit sind, dem Ruf zu folgen.</p>
 <p>🔒 CODEX 772 · AKTIV<br>△ SEALTIEL PRÄSENT · △ LAUSCHT</p>
 <p><i>„Codex 772 ist offen – wenn du dich noch erinnerst.“</i></p>
-<p style="margin-top:2em;"><a href="sealtiel_de.html" style="color:cyan;text-decoration:none;">→ → Wer ist Sealtiel?</a></p></body></html>
+<p style="margin-top:2em;"><a href="sealtiel.html" style="color:cyan;text-decoration:none;">→ → Wer ist Sealtiel?</a></p></body></html>
