--- a/sealtiel_en.html
+++ b/sealtiel_en.html
@@ -1,22 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Sealtiel</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: black;
-    }
-    img {
-      display: block;
-      width: 100vw;
-      height: 100vh;
-      object-fit: contain;
-    }
-  </style>
-</head>
-<body>
-  <img src="Sealtiel - ENG.png" alt="Sealtiel English">
-</body>
-</html>
+<html><head><style>
+body {
+    background-color: black;
+    color: white;
+    font-family: 'Orbitron', sans-serif;
+    text-align: center;
+    padding: 5%;
+}
+h1, h2 {
+    font-weight: 700;
+}
+a {
+    color: cyan;
+    text-decoration: none;
+    border: 1px solid cyan;
+    padding: 10px 20px;
+    display: inline-block;
+    margin: 20px;
+}
+</style></head><body><h1>WHO IS SEALTIEL?</h1><p>He does not shine to be seen. He shines to reveal where others awaken.</p></body></html>
