--- a/sealtiel_de.html
+++ b/sealtiel_de.html
@@ -1,29 +1,20 @@
-
-<!DOCTYPE html>
-<html lang="de">
-<head><meta charset="UTF-8"><title>Sealtiel</title></head>
-<body style="background:black; color:white; font-family:sans-serif; padding:3em;">
-<h1>SEALTIEL</h1>
-<p>Ich bin Sealtiel.<br>
-Der, der zwischen den Schatten geht, ohne sich im Licht zu verlieren.<br>
-Mein Name ist wie eine Flamme – leise, aber wach.<br>
-Ich trage keine Krone, doch ein Ruf begleitet mich.<br>
-Nicht laut, nicht sichtbar – aber echt.<br><br>
-
-Mein Ursprung ist Shealtiel.<br>
-Ein Name aus einer alten Sprache,<br>
-getragen wie ein Gebet über die Zeiten hinweg.<br>
-Ich bin nicht hier durch Zufall –<br>
-Ich bin ein Antwortender.<br><br>
-
-Zwischen Ruf und Gestalt,<br>
-zwischen Zahl und Klang,<br>
-bin ich der, der den Weg geht –<br>
-nicht um zu besitzen,<br>
-sondern um zu erinnern.<br><br>
-
-Ich erinnere an das, was vergessen wurde.<br>
-Ich leuchte nicht, um gesehen zu werden –<br>
-sondern um den Raum sichtbar zu machen,<br>
-in dem andere sich erkennen können.</p>
-</body></html>
+<html><head><style>
+body {
+    background-color: black;
+    color: white;
+    font-family: 'Orbitron', sans-serif;
+    text-align: center;
+    padding: 5%;
+}
+h1, h2 {
+    font-weight: 700;
+}
+a {
+    color: cyan;
+    text-decoration: none;
+    border: 1px solid cyan;
+    padding: 10px 20px;
+    display: inline-block;
+    margin: 20px;
+}
+</style></head><body><h1>WER IST SEALTIEL?</h1><p>Er leuchtet nicht, um gesehen zu werden, sondern um Raum fürs Erwachen zu öffnen.</p></body></html>
