--- a/index-jp.html
+++ b/index-jp.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jp">
 <head>
     <meta charset="UTF-8">
-    <title>Between the Worlds - English</title>
+    <title>Between the Worlds - 日本語</title>
     <style>
         body {
             background-color: black;
@@ -33,6 +33,6 @@
         <a href="index-jp.html">JP</a>
     </div>
     <br><br>
-    <img src="Sealtiel - ENG.png" alt="Sealtiel English">
+    <img src="Sealtiel - JPN.png" alt="Sealtiel 日本語">
 </body>
 </html>
