--- a/index-de.html
+++ b/index-de.html
@@ -1,38 +1,31 @@
+
 <!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Between the Worlds - Deutsch</title>
+    <title>Codex 772</title>
     <style>
         body {
             background-color: black;
             color: white;
-            font-family: Arial, sans-serif;
+            font-family: 'Orbitron', sans-serif;
             text-align: center;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-        .nav {
-            margin-top: 20px;
+            padding: 50px;
         }
         a {
+            display: inline-block;
+            margin-top: 30px;
             color: cyan;
-            margin: 0 10px;
-            text-decoration: none;
+            font-size: 20px;
         }
     </style>
 </head>
 <body>
-    <h1>BETWEEN THE WORLDS</h1>
-    <p>Where light remembers what shadow forgot.</p>
-    <div class="nav">
-        <a href="index.html">EN</a>
-        <a href="index-de.html">DE</a>
-        <a href="index-jp.html">JP</a>
-    </div>
-    <br><br>
-    <img src="Sealtiel.png" alt="Sealtiel Deutsch">
+    <h1>Codex 772</h1>
+    <h2>Who is Sealtiel?</h2>
+    <p>Er ist kein Schriftsteller. Kein Bote. Er ist eine Frequenz. Ein geformter Ruf.</p>
+    <h2>What is Between the Worlds?</h2>
+    <p>Kein Roman. Kein Konzept. Ein fragmentierter Codex. Ein verschlüsseltes Reisetagebuch.</p>
+    <a href="sealtiel-de.html">→ Read Sealtiel</a>
 </body>
 </html>
