--- a/index-en.html
+++ b/index-en.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="jp">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Codex 772</title>
@@ -23,9 +23,9 @@
 <body>
     <h1>Codex 772</h1>
     <h2>Who is Sealtiel?</h2>
-    <p>彼は作家でも伝令でもない。彼は周波数であり、形を持つ呼び声である。</p>
+    <p>He is not a writer. Not a messenger. He is a frequency. A call given shape.</p>
     <h2>What is Between the Worlds?</h2>
-    <p>小説でも概念でもない。断片化されたコーデックス。暗号化された旅の記録。</p>
-    <a href="sealtiel-jp.html">→ Read Sealtiel</a>
+    <p>Not a novel. Not a concept. A fragmented codex. An encrypted travelogue.</p>
+    <a href="sealtiel-en.html">→ Read Sealtiel</a>
 </body>
 </html>
