--- a/index-jp.html
+++ b/index-jp.html
@@ -1,31 +1,42 @@
-
 <!DOCTYPE html>
 <html lang="jp">
 <head>
     <meta charset="UTF-8">
-    <title>Codex 772</title>
+    <title>Between the Worlds</title>
     <style>
         body {
-            background-color: black;
+            background: black;
             color: white;
-            font-family: 'Orbitron', sans-serif;
             text-align: center;
-            padding: 50px;
+            font-family: 'Orbitron', sans-serif;
+            margin: 0;
         }
-        a {
+        .subtitle {
+            font-style: italic;
+            margin-top: 1em;
+        }
+        .btn {
+            margin-top: 2em;
+            padding: 1em 2em;
+            border: 1px solid white;
             display: inline-block;
-            margin-top: 30px;
-            color: cyan;
-            font-size: 20px;
+            text-decoration: none;
+            color: white;
+        }
+        .lang-switch {
+            margin-top: 1em;
+            font-size: 0.9em;
         }
     </style>
 </head>
 <body>
-    <h1>Codex 772</h1>
-    <h2>Who is Sealtiel?</h2>
-    <p>彼は作家でも伝令でもない。彼は周波数であり、形を持つ呼び声である。</p>
-    <h2>What is Between the Worlds?</h2>
-    <p>小説でも概念でもない。断片化されたコーデックス。暗号化された旅の記録。</p>
-    <a href="sealtiel-jp.html">→ Read Sealtiel</a>
+    <h1>BETWEEN THE WORLDS</h1>
+    <div class="subtitle">Where light remembers what shadow forgot.</div>
+    <div class="lang-switch">
+        <a href="index-en.html">EN</a> · 
+        <a href="index-de.html">DE</a> · 
+        <a href="index-jp.html">JP</a>
+    </div>
+    <a href="codex-jp.html" class="btn">Access the Codex</a>
 </body>
 </html>
