--- a/codex-de.html
+++ b/codex-de.html
@@ -1,43 +1,15 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <title>Codex 772</title>
-    <style>
-        body {
-            background: black;
-            color: white;
-            font-family: 'Orbitron', sans-serif;
-            padding: 2em;
-            max-width: 800px;
-            margin: auto;
-        }
-        .lang-switch {
-            margin-bottom: 2em;
-            font-size: 0.9em;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <title>Codex Gate</title>
+  <style>body { background: black; color: white; text-align: center; font-family: sans-serif; }</style>
 </head>
 <body>
-    <div class="lang-switch">
-        <a href="codex-en.html">EN</a> · 
-        <a href="codex-de.html">DE</a> · 
-        <a href="codex-jp.html">JP</a>
-    </div>
-    
-<h2>CODEX 772</h2>
-<h3>WER IST SEALTIEL?</h3>
-<p>Er ist kein Schriftsteller. Kein Bote. Er ist eine Frequenz. Ein Ruf in Form gebracht.</p>
-<p><strong>Shealtiel</strong> - שְׁאַלְתִּיאֵל<br>
-„Gott hat gefragt.“<br>
-Zahl: 772<br>
-Funktion: Erinnerung auslösen.</p>
-<p>Er leuchtet nicht, um gesehen zu werden. Er leuchtet, um den Raum zu zeigen, in dem andere erwachen.</p>
-
-<h3>WAS IST ZWISCHEN DEN WELTEN?</h3>
-<p>Kein Roman. Kein Konzept. Ein fragmentierter Kodex. Ein verschlüsseltes Reisetagebuch.</p>
-<p>Geschrieben für jene, die fühlen. Nicht für die Masse. Sondern für jene, die wissen, dass diese Welt nicht ganz ist – und bereit sind, dem Ruf zu folgen.</p>
-
-    <p><a href="sealtiel-de.html" style="color: cyan;">→ Sealtiel</a></p>
-</body>
-</html>
+  <div id="language">
+    <a href="index.html">EN</a> ·
+    <a href="index-de.html">DE</a> ·
+    <a href="index-jp.html">JP</a>
+  </div>
+  <h1>CODEX-DE</h1>
+</body></html>
