--- a/index-jp.html
+++ b/index-jp.html
@@ -1,42 +1,15 @@
 <!DOCTYPE html>
 <html lang="jp">
 <head>
-    <meta charset="UTF-8">
-    <title>Between the Worlds</title>
-    <style>
-        body {
-            background: black;
-            color: white;
-            text-align: center;
-            font-family: 'Orbitron', sans-serif;
-            margin: 0;
-        }
-        .subtitle {
-            font-style: italic;
-            margin-top: 1em;
-        }
-        .btn {
-            margin-top: 2em;
-            padding: 1em 2em;
-            border: 1px solid white;
-            display: inline-block;
-            text-decoration: none;
-            color: white;
-        }
-        .lang-switch {
-            margin-top: 1em;
-            font-size: 0.9em;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <title>Codex Gate</title>
+  <style>body { background: black; color: white; text-align: center; font-family: sans-serif; }</style>
 </head>
 <body>
-    <h1>BETWEEN THE WORLDS</h1>
-    <div class="subtitle">Where light remembers what shadow forgot.</div>
-    <div class="lang-switch">
-        <a href="index-en.html">EN</a> · 
-        <a href="index-de.html">DE</a> · 
-        <a href="index-jp.html">JP</a>
-    </div>
-    <a href="codex-jp.html" class="btn">Access the Codex</a>
-</body>
-</html>
+  <div id="language">
+    <a href="index.html">EN</a> ·
+    <a href="index-de.html">DE</a> ·
+    <a href="index-jp.html">JP</a>
+  </div>
+  <h1>INDEX-JP</h1>
+</body></html>
