--- a/index.html
+++ b/index.html
@@ -1,38 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Between the Worlds - English</title>
-    <style>
-        body {
-            background-color: black;
-            color: white;
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-        .nav {
-            margin-top: 20px;
-        }
-        a {
-            color: cyan;
-            margin: 0 10px;
-            text-decoration: none;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <title>Codex Gate</title>
+  <style>body { background: black; color: white; text-align: center; font-family: sans-serif; }</style>
 </head>
 <body>
-    <h1>BETWEEN THE WORLDS</h1>
-    <p>Where light remembers what shadow forgot.</p>
-    <div class="nav">
-        <a href="index.html">EN</a>
-        <a href="index-de.html">DE</a>
-        <a href="index-jp.html">JP</a>
-    </div>
-    <br><br>
-    <img src="Sealtiel - ENG.png" alt="Sealtiel English">
-</body>
-</html>
+  <div id="language">
+    <a href="index.html">EN</a> ·
+    <a href="index-de.html">DE</a> ·
+    <a href="index-jp.html">JP</a>
+  </div>
+  <h1>INDEX</h1>
+</body></html>
