--- a/sealtiel-de.html
+++ b/sealtiel-de.html
@@ -1,39 +1,16 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <title>Sealtiel</title>
-    <style>
-        body {
-            margin: 0;
-            background: black;
-            text-align: center;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-        .lang-switch {
-            position: absolute;
-            top: 10px;
-            width: 100%;
-            text-align: center;
-            font-size: 0.9em;
-            color: white;
-        }
-        .lang-switch a {
-            color: white;
-            text-decoration: none;
-            margin: 0 10px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <title>Codex Gate</title>
+  <style>body { background: black; color: white; text-align: center; font-family: sans-serif; }</style>
 </head>
 <body>
-    <div class="lang-switch">
-        <a href="sealtiel-en.html">EN</a> · 
-        <a href="sealtiel-de.html">DE</a> · 
-        <a href="sealtiel-jp.html">JP</a>
-    </div>
-    <img src="Sealtiel.png" alt="Sealtiel">
-</body>
-</html>
+  <div id="language">
+    <a href="index.html">EN</a> ·
+    <a href="index-de.html">DE</a> ·
+    <a href="index-jp.html">JP</a>
+  </div>
+  <h1>SEALTIEL-DE</h1>
+<div><a href="codex-de.html">← Back to Codex</a></div>
+</body></html>
