--- a/index-jp.html
+++ b/index-jp.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html lang="jp">
 <head>
-  <meta charset="UTF-8" />
-  <title>Codex Gate</title>
-  <style>body { background: black; color: white; text-align: center; font-family: sans-serif; }</style>
+  <meta charset="UTF-8">
+  <title>世界の狭間を越えて</title>
+  <style>
+    body {
+      background: #000; color: #fff;
+      font-family: sans-serif; text-align: center; padding: 20vh 10vw;
+    }
+    a.button {
+      display: inline-block; margin-top: 50px; padding: 15px 30px;
+      background: transparent; border: 2px solid #aaa; color: #aaa;
+      text-decoration: none; transition: 0.3s;
+    }
+    a.button:hover { background: #aaa; color: #000; }
+  </style>
 </head>
 <body>
-  <div id="language">
-    <a href="index.html">EN</a> ·
-    <a href="index-de.html">DE</a> ·
-    <a href="index-jp.html">JP</a>
-  </div>
-  <h1>INDEX-JP</h1>
-</body></html>
+  <h1>世界の狭間を越えて</h1>
+  
+<div style="margin-top: 20px;">
+  <a href="index.html">EN</a> · 
+  <a href="index-de.html">DE</a> · 
+  <a href="index-jp.html">JP</a>
+</div>
+
+  <a href="codex-jp.html" class="button">コーデックスへ</a>
+</body>
+</html>
