--- a/sealtiel-jp.html
+++ b/sealtiel-jp.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="jp">
 <head>
-  <meta charset="UTF-8" />
-  <title>Codex Gate</title>
-  <style>body { background: black; color: white; text-align: center; font-family: sans-serif; }</style>
+  <meta charset="UTF-8">
+  <title>Sealtiel</title>
+  <style>
+    body {
+      background: #000; color: #fff;
+      font-family: sans-serif; text-align: center; padding: 15vh 10vw;
+    }
+    a.back {
+      display: inline-block; margin-bottom: 40px; color: #ccc; text-decoration: none;
+    }
+    a.back:hover { color: #fff; }
+  </style>
 </head>
 <body>
-  <div id="language">
-    <a href="index.html">EN</a> ·
-    <a href="index-de.html">DE</a> ·
-    <a href="index-jp.html">JP</a>
-  </div>
-  <h1>SEALTIEL-JP</h1>
-<div><a href="codex-jp.html">← Back to Codex</a></div>
-</body></html>
+  <a href="codex-jp.html" class="back">← Back to Codex</a>
+  <h1>Sealtiel Page (JP)</h1>
+  
+<div style="margin-top: 20px;">
+  <a href="index.html">EN</a> · 
+  <a href="index-de.html">DE</a> · 
+  <a href="index-jp.html">JP</a>
+</div>
+
+</body>
+</html>
