--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Between the Worlds</title>
+  <meta charset="UTF-8" />
+  <title>Codex The Gate</title>
   <style>
     body {
-      background: #000; color: #fff;
-      font-family: sans-serif; text-align: center; padding: 20vh 10vw;
+      background-color: #000;
+      color: #eee;
+      font-family: sans-serif;
+      text-align: center;
+      padding: 50px;
     }
-    a.button {
-      display: inline-block; margin-top: 50px; padding: 15px 30px;
-      background: transparent; border: 2px solid #aaa; color: #aaa;
-      text-decoration: none; transition: 0.3s;
+    a {
+      color: #00ffff;
+      display: block;
+      margin: 10px;
+      font-size: 20px;
+      text-decoration: none;
     }
-    a.button:hover { background: #aaa; color: #000; }
   </style>
 </head>
 <body>
-  <h1>Between the Worlds</h1>
-  
-<div style="margin-top: 20px;">
-  <a href="index.html">EN</a> · 
-  <a href="index-de.html">DE</a> · 
-  <a href="index-jp.html">JP</a>
-</div>
-
-  <a href="codex-en.html" class="button">Access the Codex</a>
+  <h1>Codex The Gate</h1>
+  <p>Please choose a language to continue:</p>
+  <a href="codex_en.html">English</a>
+  <a href="codex_de.html">Deutsch</a>
+  <a href="codex_jp.html">日本語</a>
 </body>
 </html>
