--- a/sealtiel_jp.html
+++ b/sealtiel_jp.html
@@ -1,20 +1,1 @@
-<html><head><style>
-body {
-    background-color: black;
-    color: white;
-    font-family: 'Orbitron', sans-serif;
-    text-align: center;
-    padding: 5%;
-}
-h1, h2 {
-    font-weight: 700;
-}
-a {
-    color: cyan;
-    text-decoration: none;
-    border: 1px solid cyan;
-    padding: 10px 20px;
-    display: inline-block;
-    margin: 20px;
-}
-</style></head><body><h1>セアルティエルとは誰か？</h1><p>彼は見られるためでなく、他者の目覚めの空間を照らすために輝く。</p></body></html>
+<html><body style='background-color:black; color:white; text-align:center;'><h1>私はセアルティエルです (JP)</h1></body></html>
