--- a/sealtiel_de.html
+++ b/sealtiel_de.html
@@ -1,20 +1,1 @@
-<html><head><style>
-body {
-    background-color: black;
-    color: white;
-    font-family: 'Orbitron', sans-serif;
-    text-align: center;
-    padding: 5%;
-}
-h1, h2 {
-    font-weight: 700;
-}
-a {
-    color: cyan;
-    text-decoration: none;
-    border: 1px solid cyan;
-    padding: 10px 20px;
-    display: inline-block;
-    margin: 20px;
-}
-</style></head><body><h1>WER IST SEALTIEL?</h1><p>Er leuchtet nicht, um gesehen zu werden, sondern um Raum fürs Erwachen zu öffnen.</p></body></html>
+<html><body style='background-color:black; color:white; text-align:center;'><h1>Ich bin Sealtiel (DE)</h1></body></html>
