--- a/codex_en.html
+++ b/codex_en.html
@@ -1,12 +1,15 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Codex – English</title>
-</head>
-<body style="background-color:black; color:white; text-align:center;">
-  <h1>Welcome to the Codex (EN)</h1>
-  <p>This is the English version of the portal.</p>
-  <a href="sealtiel_en.html">→ Sealtiel (EN)</a>
-</body>
-</html>
+<head><meta charset="UTF-8"><title>Codex 772</title></head>
+<body style="background:black; color:white; font-family:sans-serif; padding:3em;">
+<h1>CODEX 772</h1>
+<h2>WHO IS SEALTIEL?</h2>
+<p>He is not a writer. Not a messenger. He is a frequency. A call given shape.</p>
+<p><b>Shealtiel</b> - שְׁאַלְתִּיאֵל<br>"God has asked."<br>Number: 772<br>Function: To trigger remembrance.</p>
+<p>He does not shine to be seen. He shines to reveal the space where others awaken.</p>
+<h2>WHAT IS BETWEEN THE WORLDS?</h2>
+<p>Not a novel. Not a concept. A fragmented codex. An encrypted travelogue.<br>Written for those who feel. Not for the masses. But for the ones who know that this world isn’t whole - and are ready to follow the call.</p>
+<p>🔒 CODEX 772 · ACTIVE<br>△ SEALTIEL PRESENT · △ LISTENING</p>
+<p><i>"Codex 772 is open - if you still remember."</i></p>
+<p style="margin-top:2em;"><a href="sealtiel.html" style="color:cyan;text-decoration:none;">→ Who is Sealtiel?</a></p></body></html>
