--- a/codex_jp.html
+++ b/codex_jp.html
@@ -1,12 +1,15 @@
+
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>Codex – 日本語</title>
-</head>
-<body style="background-color:black; color:white; text-align:center;">
-  <h1>ようこそ、Codexへ (JP)</h1>
-  <p>これは日本語版のポータルです。</p>
-  <a href="sealtiel_jp.html">→ Sealtiel（JP）</a>
-</body>
-</html>
+<head><meta charset="UTF-8"><title>Codex 772</title></head>
+<body style="background:black; color:white; font-family:sans-serif; padding:3em;">
+<h1>CODEX 772</h1>
+<h2>セアルティエルとは？</h2>
+<p>彼は作家ではない。使者でもない。彼は「周波数」。形を与えられた呼びかけ。</p>
+<p><b>Shealtiel</b> – שְׁאַלְתִּיאֵל<br>「神が問うた」<br>番号: 772<br>機能: 記憶を呼び覚ますこと。</p>
+<p>彼は目立つために光っているのではない。他者が目覚める空間を照らすために輝いている。</p>
+<h2>「世界の狭間を越えて」とは？</h2>
+<p>小説でも概念でもない。断片化されたコード。暗号化された旅の記録。<br>それを感じる者たちへ書かれたもの。大衆のためではなく、この世界が完全でないと知る者たちへ向けた呼びかけ。</p>
+<p>🔒 CODEX 772 · アクティブ<br>△ SEALTIEL 現在 · △ 傾聴中</p>
+<p><i>「Codex 772 は開かれている ― もし、あなたがまだ覚えているなら。」</i></p>
+<p style="margin-top:2em;"><a href="sealtiel.html" style="color:cyan;text-decoration:none;">→ → セアルティエルとは？</a></p></body></html>
