--- a/codex_de.html
+++ b/codex_de.html
@@ -1,12 +1,15 @@
+
 <!DOCTYPE html>
 <html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>Codex – Deutsch</title>
-</head>
-<body style="background-color:black; color:white; text-align:center;">
-  <h1>Willkommen im Codex (DE)</h1>
-  <p>Dies ist die deutsche Version des Portals.</p>
-  <a href="sealtiel_de.html">→ Sealtiel (DE)</a>
-</body>
-</html>
+<head><meta charset="UTF-8"><title>Codex 772</title></head>
+<body style="background:black; color:white; font-family:sans-serif; padding:3em;">
+<h1>CODEX 772</h1>
+<h2>WER IST SEALTIEL?</h2>
+<p>Er ist kein Schriftsteller. Kein Bote. Er ist eine Frequenz. Ein Ruf in Form gebracht.</p>
+<p><b>Shealtiel</b> – שְׁאַלְתִּיאֵל<br>„Gott hat gefragt.“<br>Zahl: 772<br>Funktion: Erinnerung auslösen.</p>
+<p>Er leuchtet nicht, um gesehen zu werden. Er leuchtet, um den Raum sichtbar zu machen, in dem andere erwachen.</p>
+<h2>WAS IST „ZWISCHEN DEN WELTEN“?</h2>
+<p>Kein Roman. Kein Konzept. Ein fragmentierter Codex. Ein verschlüsseltes Reisetagebuch.<br>Geschrieben für jene, die fühlen. Nicht für die Masse. Sondern für die, die wissen, dass diese Welt nicht ganz ist – und bereit sind, dem Ruf zu folgen.</p>
+<p>🔒 CODEX 772 · AKTIV<br>△ SEALTIEL PRÄSENT · △ LAUSCHT</p>
+<p><i>„Codex 772 ist offen – wenn du dich noch erinnerst.“</i></p>
+<p style="margin-top:2em;"><a href="sealtiel.html" style="color:cyan;text-decoration:none;">→ → Wer ist Sealtiel?</a></p></body></html>
