--- a/codex-jp.html
+++ b/codex-jp.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html lang="jp">
 <head>
-  <meta charset="UTF-8" />
-  <title>Codex Gate</title>
-  <style>body { background: black; color: white; text-align: center; font-family: sans-serif; }</style>
+    <meta charset="UTF-8">
+    <title>Codex 772</title>
+    <style>
+        body {
+            background: black;
+            color: white;
+            font-family: 'Orbitron', sans-serif;
+            padding: 2em;
+            max-width: 800px;
+            margin: auto;
+        }
+        .lang-switch {
+            margin-bottom: 2em;
+            font-size: 0.9em;
+        }
+    </style>
 </head>
 <body>
-  <div id="language">
-    <a href="index.html">EN</a> ·
-    <a href="index-de.html">DE</a> ·
-    <a href="index-jp.html">JP</a>
-  </div>
-  <h1>CODEX-JP</h1>
-</body></html>
+    <div class="lang-switch">
+        <a href="codex-en.html">EN</a> · 
+        <a href="codex-de.html">DE</a> · 
+        <a href="codex-jp.html">JP</a>
+    </div>
+    
+<h2>CODEX 772</h2>
+<h3>セアルティエルとは？</h3>
+<p>彼は作家でも、使者でもない。彼は「周波数」。形を与えられた呼び声。</p>
+<p><strong>Shealtiel</strong> - שְׁאַלְתִּיאֵל<br>
+「神が問うた」<br>
+番号：772<br>
+機能：記憶を呼び覚ます。</p>
+<p>彼は見られるために光るのではない。目覚める場所を照らすために輝く。</p>
+
+<h3>「世界の狭間」とは？</h3>
+<p>小説ではない。概念でもない。断片的なコード。暗号化された旅の記録。</p>
+<p>感じる者のために書かれた。大衆のためではない。世界が完全ではないことを知り、その呼び声に応える準備ができている者のために。</p>
+
+    <p><a href="Sealtiel - JPN.png" style="color: cyan;">→ Sealtiel</a></p>
+</body>
+</html>
