--- a/sealtiel.html
+++ b/sealtiel.html
@@ -1,4 +1,28 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Sealtiel</title>
+  <style>
+    body {
+      background: #000; color: #fff;
+      font-family: sans-serif; text-align: center; padding: 15vh 10vw;
+    }
+    a.back {
+      display: inline-block; margin-bottom: 40px; color: #ccc; text-decoration: none;
+    }
+    a.back:hover { color: #fff; }
+  </style>
+</head>
+<body>
+  <a href="codex-en.html" class="back">← Back to Codex</a>
+  <h1>Sealtiel Page (EN)</h1>
+  
+<div style="margin-top: 20px;">
+  <a href="index.html">EN</a> · 
+  <a href="index-de.html">DE</a> · 
+  <a href="index-jp.html">JP</a>
+</div>
 <!DOCTYPE html>
 <html lang="en">
 <head><meta charset="UTF-8"><title>Sealtiel</title></head>
