--- a/index_de.html
+++ b/index_de.html
@@ -38,7 +38,7 @@
 
   <div class="lang-buttons">
     <a href="index.html">EN</a>
-    <a href="index_de.html">DE</a>
+    <a href="index-de.html">DE</a>
     <a href="index_jp.html">JP</a>
   </div>
 
