--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
   <h1>Codex The Gate</h1>
   <p>Please choose a language to continue:</p>
-  <a href="codex_en.html">English</a>
-  <a href="codex_de.html">Deutsch</a>
-  <a href="codex_jp.html">日本語</a>
+  <a href="codex-en.html">English</a>
+  <a href="codex-de.html">Deutsch</a>
+  <a href="codex-jp.html">日本語</a>
 </body>
 </html>
