--- a/codex-de.html
+++ b/codex-de.html
@@ -39,5 +39,14 @@ Funktion: Erinnerung auslösen.</p>
 <p>Geschrieben für jene, die fühlen. Nicht für die Masse. Sondern für jene, die wissen, dass diese Welt nicht ganz ist – und bereit sind, dem Ruf zu folgen.</p>
 
     <p><a href="Sealtiel - DE.png" style="color: cyan;">→ Sealtiel</a></p>
+
+<div style="text-align:center; margin-top:40px;">
+  <p>✨ <strong>„Zwischen den Welten“</strong> ist jetzt auf Amazon erhältlich.</p>
+  <p>
+    📘 <a href="https://amzn.to/42XYWDz" target="_blank" style="color: cyan;">Taschenbuch</a> |
+    📱 <a href="https://amzn.to/43lqiSS" target="_blank" style="color: cyan;">E‑Book</a>
+  </p>
+</div>
+
 </body>
 </html>
