--- a/codex-en.html
+++ b/codex-en.html
@@ -39,5 +39,14 @@ Function: To trigger remembrance.</p>
 <p>Written for those who feel. Not for the masses. But for the ones who know that this world isn’t whole – and are ready to follow the call.</p>
 
     <p><a href="Sealtiel - ENG.png" style="color: cyan;">→ Sealtiel</a></p>
+    
+    <div style="text-align:center; margin-top:40px;">
+  <p>✨ <strong>"Between the Worlds"</strong> is now available on Amazon.</p>
+  <p>
+    📘 <a href="https://amzn.to/44t50DL" target="_blank" style="color: cyan;">Paperback</a> |
+    📱 <a href="https://amzn.to/45Mjgto" target="_blank" style="color: cyan;">E‑Book</a>
+  </p>
+</div>
+    
 </body>
 </html>
