--- a/codex-jp.html
+++ b/codex-jp.html
@@ -39,5 +39,13 @@
 <p>感じる者のために書かれた。大衆のためではない。世界が完全ではないことを知り、その呼び声に応える準備ができている者のために。</p>
 
     <p><a href="Sealtiel - JPN.png" style="color: cyan;">→ Sealtiel</a></p>
+
+    <div style="text-align:center; margin-top:40px;">
+  <p>✨ <strong>『世界の狭間を越えて』</strong>は現在Amazonで発売中。</p>
+  <p>
+    📱 <a href="https://amzn.to/4nq6DKK" target="_blank" style="color: cyan;">電子書籍（E‑Book）</a>
+  </p>
+</div>
+
 </body>
 </html>
